# heb-fst

./: .gitignore  ERRORS.md  PLAN.md  README.md  log.txt  pyproject.toml
rust-heb-fst/: Cargo.toml
rust-heb-fst/src/: main.rs
src/: fst.py  lexicon.py  phonemize.py
tests/: basic.csv  test_phonemize.py
